# gitfetchzip

./: .gitignore  Cargo.toml  README.md  build.py  build_manual.md  buildbin.sh  install.ps1  install.sh
builder/: __init__.py  config.py  executor.py  targets.py  tools.py
dist_beta/: gitfetchzip-linux-aarch64
src/: cli.rs  downloader.rs  error.rs  extractor.rs  fs.rs  github.rs  main.rs
