[package]
name = "gitfetchzip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
